<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/point1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/point1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/point2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/point2"
        app:layout_constraintVertical_bias="0.97"
        app:layout_constraintHorizontal_bias="0"
        android:fontFamily="@font/museosans_300"
        />

    <TextView
        android:id="@+id/point2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/point2"
        app:layout_constraintBottom_toTopOf="@+id/point3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        android:fontFamily="@font/museosans_300"/>

    <ImageView
        android:id="@+id/check1"
        android:contentDescription="@string/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/point1"
        app:layout_constraintTop_toTopOf="@+id/point1"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="0"
        />

    <ImageView
        android:id="@+id/check2"
        android:contentDescription="@string/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/point2"
        app:layout_constraintTop_toTopOf="@+id/point2"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="0"
        />

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_green_flag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        />

    <TextView
        android:id="@+id/bigText"
        android:layout_width="276dp"
        android:layout_height="74dp"
        android:text="@string/longtext"
        android:textSize="20sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/point1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.5"
        android:fontFamily="@font/museosans_300"/>

    <ImageView
        android:id="@+id/check3"
        android:contentDescription="@string/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/point3"
        app:layout_constraintTop_toTopOf="@+id/point3"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="0"
        />

    <TextView
        android:id="@+id/point3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/point3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/point2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:fontFamily="@font/museosans_300"/>

    <ImageView
        android:id="@+id/buttonBack"
        android:contentDescription="@string/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/gradient_button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        android:layout_margin="15pt"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
        app:layout_constraintLeft_toLeftOf="@+id/buttonBack"
        app:layout_constraintRight_toRightOf="@+id/buttonBack"
        app:layout_constraintTop_toTopOf="@+id/buttonBack"
        android:textColor="@color/black"
        android:fontFamily="@font/museosans_300"
        />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
        app:layout_constraintLeft_toLeftOf="@+id/buttonBack"
        app:layout_constraintRight_toRightOf="@+id/buttonBack"
        app:layout_constraintTop_toTopOf="@+id/buttonBack"
        app:layout_constraintVertical_bias="1"
        android:alpha="0"
        android:layout_margin="10pt"
        />

</androidx.constraintlayout.widget.ConstraintLayout>